[package]
name = "ultvox"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Removed: "animation", "bevy_animation", "bevy_audio", "bevy_gilrs", "bevy_gltf", "filesystem_watcher", "hdr", "ktx2", "tonemapping_luts", "vorbis", "zstd"
bevy = { version = "0.10.1", default-features = false, features = ["bevy_pbr", "bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_text", "bevy_winit", "png", "x11"] }
bevy_egui = "0.20.3"
serde = "1.0.164"
ron = "0.8.0"

[profile.dev.package."*"]
opt-level = 3
